@@ -1,9 +1,12 @@
 Updates to the SalesGPT project: Building the world's best AI Sales Agents.
 
+August 23 2023
+---------------
+- "use_tools" as a keyword argument (kwarg) is treated as STRING i.e., agent_config["use_tools"]="True"
+to be consistent with JSON payloads.
+
 August 18, 2023
 ---------------
-Version 0.0.6
-
 - SalesGPT API - added chat as a service and Chinese language SalesGPT prompt, huge thanks to @janewu77!
 
 July 29, 2023
